<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PlaceholderFragment">

    <TextView
        android:id="@+id/textView_pinky_reading"
        android:layout_width="37dp"
        android:layout_height="23dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fingers"
        app:layout_constraintVertical_bias="0.633" />

    <TextView
        android:id="@+id/textView_ring_reading"
        android:layout_width="37dp"
        android:layout_height="23dp"
        android:layout_marginEnd="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fingers"
        app:layout_constraintVertical_bias="0.267" />

    <TextView
        android:id="@+id/textView_middle_reading"
        android:layout_width="37dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_fingers"
        app:layout_constraintTop_toBottomOf="@+id/textView_fingers"
        app:layout_constraintVertical_bias="0.819" />

    <TextView
        android:id="@+id/textView_index_reading"
        android:layout_width="37dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_fingers"
        app:layout_constraintTop_toBottomOf="@+id/textView_fingers" />

    <TextView
        android:id="@+id/textView_thumb5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pinky_readings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_thumb4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_thumb4"
        app:layout_constraintTop_toBottomOf="@+id/textView_thumb4"
        app:layout_constraintVertical_bias="0.387" />

    <TextView
        android:id="@+id/textView_thumb4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ring_readings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.658"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fingers"
        app:layout_constraintVertical_bias="0.284" />

    <TextView
        android:id="@+id/textView_thumb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/middle_readings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_index"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/textView_index"
        app:layout_constraintTop_toBottomOf="@+id/textView_fingers"
        app:layout_constraintVertical_bias="0.801" />

    <TextView
        android:id="@+id/textView_index"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/index_readings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_thumb"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="@+id/textView_thumb"
        app:layout_constraintTop_toBottomOf="@+id/textView_fingers"
        app:layout_constraintVertical_bias="0.465" />

    <TextView
        android:id="@+id/textView_fingers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fingers_readings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_accelerometer"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/textView_accelerometer"
        app:layout_constraintTop_toBottomOf="@+id/textView_accelerometer"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/textView_gyr_Y"
        android:layout_width="36dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_accelerometer"
        app:layout_constraintHorizontal_bias="0.618"
        app:layout_constraintStart_toEndOf="@+id/textView_acc_X"
        app:layout_constraintTop_toBottomOf="@+id/textView_accelerometer"
        app:layout_constraintVertical_bias="0.392" />

    <TextView
        android:id="@+id/textView_gyr_X"
        android:layout_width="29dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_accelerometer"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_accelerometer"
        app:layout_constraintVertical_bias="0.375" />

    <TextView
        android:id="@+id/textView_gyr_Z"
        android:layout_width="25dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.373"
        app:layout_constraintStart_toEndOf="@+id/textView_accelerometer"
        app:layout_constraintTop_toBottomOf="@+id/textView_accelerometer"
        app:layout_constraintVertical_bias="0.396" />

    <TextView
        android:id="@+id/textView_BT"
        android:layout_width="76dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:text="@string/bluetooth_switch"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <Switch
        android:id="@+id/switchBT"
        android:layout_width="94dp"
        android:layout_height="39dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toEndOf="@+id/textView_BT"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_vrglove"
        android:layout_width="79dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:text="@string/vrglove_status"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_BT"
        app:layout_constraintVertical_bias="0.056" />

    <TextView
        android:id="@+id/textView_vrGlove_status"
        android:layout_width="91dp"
        android:layout_height="39dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toEndOf="@+id/textView_vrglove"
        app:layout_constraintTop_toBottomOf="@+id/switchBT" />

    <Button
        android:id="@+id/buttonConnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:text="@string/vrglove_connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <Button
        android:id="@+id/buttonDisconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vrglove_disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toEndOf="@+id/buttonConnect"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.276" />

    <TextView
        android:id="@+id/textView_accelerometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelerometer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/textView_acc_X"
        android:layout_width="29dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_accelerometer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_accelerometer"
        app:layout_constraintVertical_bias="0.043" />

    <TextView
        android:id="@+id/textView_acc_Y"
        android:layout_width="36dp"
        android:layout_height="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_accelerometer"
        app:layout_constraintHorizontal_bias="0.66"
        app:layout_constraintStart_toEndOf="@+id/textView_acc_X"
        app:layout_constraintTop_toBottomOf="@+id/textView_accelerometer"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/textView_acc_Z"
        android:layout_width="25dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.439"
        app:layout_constraintStart_toEndOf="@+id/textView_accelerometer"
        app:layout_constraintTop_toBottomOf="@+id/textView_accelerometer"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/textView_gyr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyroscope"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView_accelerometer"
        app:layout_constraintStart_toStartOf="@+id/textView_accelerometer"
        app:layout_constraintTop_toBottomOf="@+id/textView_accelerometer"
        app:layout_constraintVertical_bias="0.254" />

    <TextView
        android:id="@+id/textView_thumb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thumb_readings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_fingers"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_fingers"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/textView_thumb_reading"
        android:layout_width="37dp"
        android:layout_height="23dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView_fingers"
        app:layout_constraintTop_toBottomOf="@+id/textView_fingers"
        app:layout_constraintVertical_bias="0.18" />

</androidx.constraintlayout.widget.ConstraintLayout>